--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
   <head>
     <title>File Upload</title>
+    <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
   <body>
-    <form action="fileupload" method="post" enctype="multipart/form-data">
+    <form
+      action="fileupload"
+      method="post"
+      enctype="multipart/form-data"
+      class="file-upload-form"
+    >
       <input type="file" name="filetoupload" /><br />
       <input type="submit" />
     </form>
